--- a/css/style.css
+++ b/css/style.css
@@ -122,11 +122,12 @@
   position: absolute;
   display: flex;
   flex-direction: column;
-  top: 612px;
-  right: -93px;
+  top: 606px;
+  right: -95px;
   background-color: #fff;
   border-radius: 12px;
   z-index: 2;
+  box-shadow: 0px 40px 80px -16px rgba(0, 0, 0, 0.0784313725);
 }
 
 .card {
@@ -141,6 +142,7 @@
   top: 0;
   left: 0;
   position: relative;
+  padding: 21px 22px;
 }
 .card__present {
   width: 49px;
@@ -266,7 +268,7 @@
 }
 
 .offer {
-  margin: 61px auto 60px auto;
+  margin: 157px auto 60px auto;
   display: flex;
   justify-content: space-between;
   width: 1128px;
@@ -357,4 +359,233 @@
   line-height: 180%;
   color: #121127;
   list-style-type: none;
+}
+
+.advantage {
+  width: 1128px;
+  margin: 0 auto;
+  padding-top: 24px;
+}
+.advantage__header {
+  max-width: 604px;
+  margin-bottom: 40px;
+}
+.advantage__title {
+  font-family: Poppins;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 170%;
+  letter-spacing: 0.8px;
+  text-transform: uppercase;
+  color: #444bd3;
+}
+.advantage__slogan {
+  font-family: Poppins;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 140%;
+  color: #121127;
+}
+
+.slider__wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.slider__dots {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+.slider__dots__dot {
+  width: 4px;
+  height: 4px;
+  background-color: #32334c;
+  border-radius: 50%;
+}
+.slider__dots__dot--active {
+  width: 8px;
+  height: 8px;
+  background-color: #9d097c;
+}
+.slider__dots__dot__wrapper--active {
+  width: 24px;
+  height: 24px;
+  border: 1px solid #9d097c;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.slider__arrow {
+  background-color: #fff0f5;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.slider__arrow--right {
+  transform: rotate(180deg);
+}
+.slider__pagination {
+  display: flex;
+  gap: 16px;
+  width: 172px;
+  margin: 40px auto 0 auto;
+}
+
+.tile {
+  width: 264px;
+  height: 322px;
+  box-shadow: 0px 20px 50px 0px rgba(18, 17, 39, 0.0784313725);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 12px;
+}
+.tile__wrapper {
+  margin: 56px 24px;
+}
+.tile__logo {
+  width: 48px;
+  height: 48px;
+  margin-bottom: 24px;
+}
+.tile__title {
+  font-family: Poppins;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 140%;
+  color: #121127;
+  margin-bottom: 16px;
+}
+.tile__description {
+  font-family: Poppins;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 180%;
+  color: rgba(18, 17, 39, 0.5607843137);
+}
+
+.examples {
+  width: 1128px;
+  margin: 192px auto 0 auto;
+}
+.examples__title {
+  font-family: Poppins;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 170%;
+  letter-spacing: 0.8px;
+  text-transform: uppercase;
+  color: #444bd3;
+  margin-bottom: 12px;
+}
+.examples__header {
+  font-family: Poppins;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 140%;
+  color: #121127;
+  margin-bottom: 41px;
+}
+.examples__wrapper {
+  display: flex;
+  gap: 120px;
+}
+
+.example {
+  position: relative;
+  width: 456px;
+}
+.example__title {
+  font-family: Poppins;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 140%;
+  color: #444bd3;
+  margin-bottom: 12px;
+}
+.example__description {
+  font-family: Poppins;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 180%;
+  color: rgba(18, 17, 39, 0.5607843137);
+  margin-bottom: 32px;
+}
+.example__image {
+  width: 456px;
+  height: 297px;
+  margin-bottom: 32px;
+}
+.example__list {
+  font-family: Poppins;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 180%;
+  color: #121127;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  list-style: none;
+}
+.example__list__item {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
+.example__list__daw {
+  background-color: #90ecf4;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.note {
+  background-color: #201f37;
+  width: 196px;
+  position: absolute;
+  border-radius: 12px;
+  top: 318px;
+  right: -95px;
+}
+.note__title {
+  padding: 13px;
+  font-family: Gilroy;
+  font-weight: 700;
+  font-size: 8.29px;
+  line-height: 130%;
+  text-transform: uppercase;
+  color: #7a7a7a;
+}
+.note__list {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 13px;
+  gap: 11px;
+}
+.note__list__item {
+  list-style: none;
+  padding-left: 13px;
+  font-family: Gilroy;
+  font-weight: 700;
+  font-size: 8.29px;
+  line-height: 130%;
+  color: #fff;
+  display: flex;
+  align-items: center;
+}
+.note__list__item > img {
+  margin-right: 8px;
+}
+.note__list__item > span {
+  color: #7a7a7a;
+}
+.note__list__item:nth-child(2) {
+  color: rgb(244, 203, 122);
 }/*# sourceMappingURL=style.css.map */
