--- a/css/style.scss
+++ b/css/style.scss
@@ -128,11 +128,12 @@
         position: absolute;
         display: flex;
         flex-direction: column;
-        top: 612px;
-        right: -93px;
+        top: 606px;
+        right: -95px;
         background-color: #fff;
         border-radius: 12px;
         z-index: 2;
+        box-shadow: 0px 40px 80px -16px #00000014;
     }
 }
 .card {
@@ -146,6 +147,7 @@
         top: 0;
         left: 0;
         position: relative;
+        padding: 21px 22px;
     }
     &__present {
         @include card;
@@ -261,7 +263,7 @@
     }
 }
 .offer {
-    margin: 61px auto 60px auto;
+    margin: calc(61px + 96px) auto 60px auto;
     display: flex;
     justify-content: space-between;
     width: 1128px;
@@ -353,5 +355,234 @@
         line-height: 180%;
         color: #121127;
         list-style-type: none;
+    }
+}
+.advantage {
+    width: 1128px;
+    margin: 0 auto;
+    padding-top: 24px;
+    &__header {
+        max-width: 604px;
+        margin-bottom: 40px;
+    }
+    &__title {
+        font-family: Poppins;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 170%;
+        letter-spacing: 0.8px;
+        text-transform: uppercase;
+        color: #444bd3;
+    }
+    &__slogan {
+        font-family: Poppins;
+        font-weight: 700;
+        font-size: 40px;
+        line-height: 140%;
+        color: $gray;
+    }
+}
+.slider {
+    &__wrapper {
+        display: flex;
+        justify-content: space-between;
+    }
+    &__dots {
+        display: flex;
+        gap: 8px;
+        align-items: center;
+        &__dot {
+            width: 4px;
+            height: 4px;
+            background-color: #32334c;
+            border-radius: 50%;
+            &--active {
+                width: 8px;
+                height: 8px;
+                background-color: #9d097c;
+            }
+
+            &__wrapper {
+                &--active {
+                    width: 24px;
+                    height: 24px;
+                    border: 1px solid #9d097c;
+                    border-radius: 50%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+            }
+        }
+    }
+    &__arrow {
+        background-color: #fff0f5;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &--right {
+            transform: rotate(180deg);
+        }
+    }
+    &__pagination {
+        display: flex;
+        gap: 16px;
+        width: 172px;
+        margin: 40px auto 0 auto;
+    }
+}
+.tile {
+    width: 264px;
+    height: 322px;
+    box-shadow: 0px 20px 50px 0px #12112714;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+    &__wrapper {
+        margin: 56px 24px;
+    }
+    &__logo {
+        width: 48px;
+        height: 48px;
+        margin-bottom: 24px;
+    }
+    &__title {
+        font-family: Poppins;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 140%;
+        color: $gray;
+        margin-bottom: 16px;
+    }
+    &__description {
+        font-family: Poppins;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 180%;
+        color: #1211278f;
+    }
+}
+.examples {
+    width: 1128px;
+    margin: calc(96px * 2) auto 0 auto;
+    &__title {
+        font-family: Poppins;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 170%;
+        letter-spacing: 0.8px;
+        text-transform: uppercase;
+        color: #444bd3;
+        margin-bottom: 12px;
+    }
+    &__header {
+        font-family: Poppins;
+        font-weight: 700;
+        font-size: 40px;
+        line-height: 140%;
+        color: $gray;
+        margin-bottom: 41px;
+    }
+    &__wrapper {
+        display: flex;
+        gap: 120px;
+    }
+}
+.example {
+    position: relative;
+    width: 456px;
+    &__title {
+        font-family: Poppins;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 140%;
+        color: #444bd3;
+        margin-bottom: 12px;
+    }
+    &__description {
+        font-family: Poppins;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 180%;
+        color: #1211278f;
+        margin-bottom: 32px;
+    }
+    &__image {
+        width: 456px;
+        height: 297px;
+        margin-bottom: 32px;
+    }
+    &__list {
+        font-family: Poppins;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 180%;
+        color: $gray;
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        list-style: none;
+        &__item {
+            display: flex;
+            gap: 12px;
+            align-items: center;
+        }
+        &__daw {
+            background-color: #90ecf4;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    }
+}
+.note {
+    background-color: #201f37;
+    width: 196px;
+    position: absolute;
+    border-radius: 12px;
+    top: 318px;
+    right: -95px;
+    &__title {
+        padding: 13px;
+        font-family: Gilroy;
+        font-weight: 700;
+        font-size: 8.29px;
+        line-height: 130%;
+        text-transform: uppercase;
+        color: #7a7a7a;
+    }
+    &__list {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 13px;
+        gap: 11px;
+        // grid-area: 11px;
+        &__item {
+            list-style: none;
+            padding-left: 13px;
+            font-family: Gilroy;
+            font-weight: 700;
+            font-size: 8.29px;
+            line-height: 130%;
+            color: #fff;
+            display: flex;
+            align-items: center;
+            & > img {
+                margin-right: 8px;
+            }
+            & > span {
+                color: #7a7a7a;
+            }
+            &:nth-child(2) {
+                color: rgb(244,203,122);
+            }
+        }
     }
 }
