--- a/css/style.scss
+++ b/css/style.scss
@@ -1,588 +1,20 @@
 @import "const";
-@mixin font {
-    font-family: Poppins;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 24px;
-}
-@mixin card {
-    width: 49px;
-    height: 49px;
-    border-radius: 50%;
-    align-content: center;
-    margin-right: 12px;
-}
-
+@import "blocks/navbar";
+@import "blocks/hero";
+@import "blocks/card";
+@import "blocks/logos";
+@import "blocks/cta";
+@import "blocks/offer";
+@import "blocks/footer";
+@import "blocks/slider";
+@import "blocks/tile";
+@import "blocks/examples";
+@import "blocks/note";
+@import "blocks/popup";
+@import "blocks/advantage";
 * {
     padding: 0px;
     margin: 0px;
     border: none;
-}
-
-.navbar {
-    display: flex;
-    padding: 32px 0;
-    width: 1128px;
-    margin: 0 auto;
-    &__logo {
-        width: 88px;
-        height: 36px;
-        margin-right: 40px;
-    }
-    &__items {
-        display: flex;
-        gap: 48px;
-        height: 24px;
-        &__item {
-            @include font;
-            color: $grayOpacity;
-            list-style-type: none;
-        }
-    }
-    &__buttons {
-        display: flex;
-        gap: 8px;
-    }
-    &__wrapper {
-        display: flex;
-        width: calc(100% - 128px);
-        justify-content: space-between;
-        align-items: center;
-    }
-}
-.button {
-    width: 102px;
-    height: 40px;
-    border-radius: 6px;
-    @include font;
-    cursor: pointer;
-
-    &--up {
-        background-color: #444bd3;
-        color: #ffffff;
-    }
-    &--in {
-        color: $gray;
-        background-color: #fff;
-    }
-}
-.hero {
-    max-width: 936px;
-    margin: 88px auto 163px auto;
-    text-align: center;
-    position: relative;
-    &__title {
-        font-family: Poppins;
-        font-weight: 700;
-        font-size: 56px;
-        line-height: 120%;
-        padding: 0 8px;
-    }
-    &__description {
-        font-family: Poppins;
-        font-weight: 400;
-        font-size: 20px;
-        line-height: 180%;
-        color: $grayOpacity;
-        margin: 20px 0 72px 0;
-    }
-    &__video {
-        border-radius: 16px;
-        width: 744px;
-        height: 418px;
-    }
-    &__diagram {
-        height: 54px;
-        width: 54px;
-        position: absolute;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        top: 28px;
-        left: -155px;
-        background-color: #fff3f3;
-        border-radius: 45px;
-    }
-    &__memoji {
-        height: 32px;
-        width: 32px;
-        position: absolute;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        top: 95px;
-        right: -18px;
-        background-color: #57b8f6;
-        border-radius: 50%;
-        &__image {
-            width: 39px;
-            height: 39px;
-        }
-    }
-    &__arrow {
-        position: absolute;
-        top: 611px;
-        left: -86px;
-    }
-    &__notification {
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        top: 606px;
-        right: -95px;
-        background-color: #fff;
-        border-radius: 12px;
-        z-index: 2;
-        box-shadow: 0px 40px 80px -16px #00000014;
-    }
-}
-.card {
-    display: flex;
-    padding: 14px 19px;
-    position: absolute;
-    align-items: center;
-    top: 210px;
-    left: -47px;
-    &-second {
-        top: 0;
-        left: 0;
-        position: relative;
-        padding: 21px 22px;
-    }
-    &__present {
-        @include card;
-        background: linear-gradient(to bottom, #f78291, #e75c6b);
-        &__image {
-            width: 24px;
-            height: 24px;
-        }
-    }
-    &__info {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        max-height: 40px;
-        &__title {
-            font-family: Poppins;
-            font-weight: 700;
-            font-size: 17px;
-            line-height: 120%;
-            color: $gray;
-            margin-bottom: 7px;
-        }
-        &__description {
-            font-family: Poppins;
-            font-weight: 400;
-            font-size: 11px;
-            line-height: 120%;
-            color: #8b898f;
-        }
-    }
-    &__message {
-        @include card;
-        width: 42px;
-        height: 42px;
-        background-color: #ffbb24;
-        &__image {
-            width: 24px;
-            height: 24px;
-        }
-    }
-}
-.logos {
-    display: flex;
-    position: relative;
-    height: 36px;
-    padding: 0 19px;
-    &__item {
-        width: 30px;
-        height: 30px;
-        position: absolute;
-        border-radius: 50%;
-        &-item1 {
-            top: 3px;
-        }
-        &-item2 {
-            left: calc(20px + 19px);
-        }
-        &-item3 {
-            left: calc(50px + 19px);
-        }
-        &-item4 {
-            top: 3px;
-            left: calc(80px + 19px);
-            background-color: #5cb6e9;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-    }
-}
-.cta {
-    background-color: #444bd3;
-    &__wrapper {
-        width: 744px;
-        padding: 96px 0;
-        margin: 0 auto;
-        font-family: Poppins;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    &__title {
-        font-weight: 700;
-        font-size: 44px;
-        line-height: 140%;
-        color: #fff;
-        margin-bottom: 20px;
-        padding: 0 41px;
-        text-align: center;
-    }
-    &__p {
-        font-weight: 400;
-        font-size: 20px;
-        line-height: 180%;
-        color: #ffffff8f;
-        margin-bottom: 20px;
-        text-align: center;
-    }
-    &__button {
-        color: #444bd3;
-        background-color: #fff;
-        padding: 14px 32px;
-        border-radius: 8px;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 150%;
-        font-family: Poppins;
-        &--offer {
-            color: #fff;
-            background-color: #444bd3;
-            max-height: 52px;
-        }
-    }
-}
-.offer {
-    margin: calc(61px + 96px) auto 60px auto;
-    display: flex;
-    justify-content: space-between;
-    width: 1128px;
-    align-items: center;
-    &__wrapper {
-        display: flex;
-        flex-direction: column;
-    }
-    &__title {
-        font-family: Poppins;
-        font-weight: 700;
-        font-size: 32px;
-        line-height: 140%;
-        color: $gray;
-        margin-bottom: 8px;
-        & > span {
-            color: #444bd3;
-        }
-    }
-    &__p {
-        font-family: Poppins;
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 180%;
-        color: #1211278f;
-    }
-}
-.footer {
-    &__wrapper {
-        margin: 56px auto 71px auto;
-        // margin-top: 56px;
-        width: 1128px;
-        display: flex;
-    }
-    &__сopyright {
-        font-family: Poppins;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 180%;
-        text-align: center;
-        width: 1128px;
-        color: #1211278f;
-        padding: 37px 0 40px 0;
-        margin: 0 auto;
-        border-top: 1px solid #1211271f;
-    }
-    &__description {
-        font-family: Poppins;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 180%;
-        color: #1211278f;
-        margin: 24px 0;
-    }
-    &__contacts {
-        max-width: 360px;
-    }
-    &__info {
-        width: 100%;
-        display: flex;
-        justify-content: space-around;
-    }
-}
-.socialMedia {
-    display: flex;
-    gap: 32px;
-    &__item {
-        list-style-type: none;
-    }
-}
-.card {
-    &__title {
-        font-family: Poppins;
-        font-weight: 600;
-        font-size: 14px;
-        line-height: 170%;
-        letter-spacing: 0.8px;
-        text-transform: uppercase;
-        color: #12112766;
-        margin-bottom: 20px;
-    }
-    &__list {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-        font-family: Poppins;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 180%;
-        color: #121127;
-        list-style-type: none;
-    }
-}
-.advantage {
-    width: 1128px;
-    margin: 0 auto;
-    padding-top: 24px;
-    &__header {
-        max-width: 604px;
-        margin-bottom: 40px;
-    }
-    &__title {
-        font-family: Poppins;
-        font-weight: 600;
-        font-size: 14px;
-        line-height: 170%;
-        letter-spacing: 0.8px;
-        text-transform: uppercase;
-        color: #444bd3;
-    }
-    &__slogan {
-        font-family: Poppins;
-        font-weight: 700;
-        font-size: 40px;
-        line-height: 140%;
-        color: $gray;
-    }
-}
-.slider {
-    &__wrapper {
-        display: flex;
-        justify-content: space-between;
-    }
-    &__dots {
-        display: flex;
-        gap: 8px;
-        align-items: center;
-        &__dot {
-            width: 4px;
-            height: 4px;
-            background-color: #32334c;
-            border-radius: 50%;
-            &--active {
-                width: 8px;
-                height: 8px;
-                background-color: #9d097c;
-            }
-
-            &__wrapper {
-                &--active {
-                    width: 24px;
-                    height: 24px;
-                    border: 1px solid #9d097c;
-                    border-radius: 50%;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                }
-            }
-        }
-    }
-    &__arrow {
-        background-color: #fff0f5;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        &--right {
-            transform: rotate(180deg);
-        }
-    }
-    &__pagination {
-        display: flex;
-        gap: 16px;
-        width: 172px;
-        margin: 40px auto 0 auto;
-    }
-}
-.tile {
-    width: 264px;
-    height: 322px;
-    box-shadow: 0px 20px 50px 0px #12112714;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 12px;
-    &__wrapper {
-        margin: 56px 24px;
-    }
-    &__logo {
-        width: 48px;
-        height: 48px;
-        margin-bottom: 24px;
-    }
-    &__title {
-        font-family: Poppins;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 140%;
-        color: $gray;
-        margin-bottom: 16px;
-    }
-    &__description {
-        font-family: Poppins;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 180%;
-        color: #1211278f;
-    }
-}
-.examples {
-    width: 1128px;
-    margin: calc(96px * 2) auto 0 auto;
-    &__title {
-        font-family: Poppins;
-        font-weight: 600;
-        font-size: 14px;
-        line-height: 170%;
-        letter-spacing: 0.8px;
-        text-transform: uppercase;
-        color: #444bd3;
-        margin-bottom: 12px;
-    }
-    &__header {
-        font-family: Poppins;
-        font-weight: 700;
-        font-size: 40px;
-        line-height: 140%;
-        color: $gray;
-        margin-bottom: 41px;
-    }
-    &__wrapper {
-        display: flex;
-        gap: 120px;
-    }
-}
-.example {
-    position: relative;
-    width: 456px;
-    &__title {
-        font-family: Poppins;
-        font-weight: 700;
-        font-size: 20px;
-        line-height: 140%;
-        color: #444bd3;
-        margin-bottom: 12px;
-    }
-    &__description {
-        font-family: Poppins;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 180%;
-        color: #1211278f;
-        margin-bottom: 32px;
-    }
-    &__image {
-        width: 456px;
-        height: 297px;
-        margin-bottom: 32px;
-    }
-    &__list {
-        font-family: Poppins;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 180%;
-        color: $gray;
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-        list-style: none;
-        &__item {
-            display: flex;
-            gap: 12px;
-            align-items: center;
-        }
-        &__daw {
-            background-color: #90ecf4;
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-    }
-}
-.note {
-    background-color: #201f37;
-    width: 196px;
-    position: absolute;
-    border-radius: 12px;
-    top: 318px;
-    right: -95px;
-    &__title {
-        padding: 13px;
-        font-family: Gilroy;
-        font-weight: 700;
-        font-size: 8.29px;
-        line-height: 130%;
-        text-transform: uppercase;
-        color: #7a7a7a;
-    }
-    &__list {
-        display: flex;
-        flex-direction: column;
-        padding-bottom: 13px;
-        gap: 11px;
-        // grid-area: 11px;
-        &__item {
-            list-style: none;
-            padding-left: 13px;
-            font-family: Gilroy;
-            font-weight: 700;
-            font-size: 8.29px;
-            line-height: 130%;
-            color: #fff;
-            display: flex;
-            align-items: center;
-            & > img {
-                margin-right: 8px;
-            }
-            & > span {
-                color: #7a7a7a;
-            }
-            &:nth-child(2) {
-                color: rgb(244,203,122);
-            }
-        }
-    }
+    box-sizing: border-box;
 }
