* - рефакторинг, оживление слайдера

--- a/css/blocks/_advantage.scss
+++ b/css/blocks/_advantage.scss
@@ -3,6 +3,12 @@
     width: 1128px;
     margin: 0 auto;
     padding-top: 24px;
+    @media screen and (max-width: 1128px) {
+        width: calc(768px - 20px);
+        @media screen and (max-width: 768px) {
+            width: 405px;
+        }
+    }
     &__header {
         max-width: 604px;
         margin-bottom: 40px;
@@ -13,6 +19,9 @@
         text-transform: uppercase;
     }
     &__slogan {
-         @include font(700, 40px, 140%, $gray);
+        @include font(700, 40px, 140%, $gray);
+         @media screen and (max-width: 768px) {
+            font-size: 20px;
+        }
     }
 }
