--- a/css/blocks/_hero.scss
+++ b/css/blocks/_hero.scss
@@ -1,4 +1,5 @@
 @import "mixins";
+@import "../const";
 .hero {
     max-width: 936px;
     margin: 88px auto 163px auto;
@@ -16,6 +17,9 @@
         border-radius: 16px;
         width: 744px;
         height: 418px;
+        @media screen and (max-width: 768px) {
+            width: 405px;
+        }
     }
     &__diagram {
         height: 54px;
@@ -34,10 +38,18 @@
         @include circle(32px);
         background-color: #57b8f6;
         &__image {
-            width: 39px;
-            height: 39px;
+            width: 100%;
+        }
+        @media screen and (max-width: 1128px) {
+            top: 220px;
+            right: 40px;
         }
     }
+    &__image {
+        width: 39px;
+        height: 39px;
+    }
+
     &__arrow {
         position: absolute;
         top: 611px;
@@ -53,6 +65,18 @@
         border-radius: 12px;
         z-index: 2;
         box-shadow: 0px 40px 80px -16px #00000014;
+        @media screen and (max-width: 1128px) {
+            position: relative;
+            flex-direction: row;
+            align-items: center;
+            top: 0;
+            right: 0;
+            justify-content: center;
+            margin-top: 15px;
+            @media screen and (max-width: 768px) {
+                justify-content: flex-start;
+            }
+        }
     }
 }
 .card {
@@ -61,6 +85,16 @@
         letter-spacing: 0.8px;
         text-transform: uppercase;
         margin-bottom: 20px;
+        position: relative;
+        @media screen and (max-width: 1168px) {
+            &::before {
+                content: "";
+                position: absolute;
+                left: -20px;
+                height: 100%;
+                border: 1px solid $indigo;
+            }
+        }
     }
     &__list {
         display: flex;
