--- a/css/blocks/_navbar.scss
+++ b/css/blocks/_navbar.scss
@@ -4,15 +4,33 @@
     padding: 32px 0;
     width: 1128px;
     margin: 0 auto;
+    @media screen and (max-width: 1128px) {
+        width: 768px;
+        @media screen and (max-width: 768px) {
+            width: 405px;
+        }
+    }
     &__logo {
         width: 88px;
         height: 36px;
         margin-right: 40px;
+        @media screen and (max-width: 1128px) {
+            margin: 0 20px 0 10px;
+            @media screen and (max-width: 768px) {
+                display: none;
+            }
+        }
     }
     &__items {
         display: flex;
         gap: 48px;
         height: 24px;
+        @media screen and (max-width: 768px) {
+            width: 300px;
+            gap: 20px;
+            flex-wrap: wrap;
+            height: auto;
+        }
         &__item {
             @include font(500, 14px, 24px, $grayOpacity);
             list-style-type: none;
@@ -27,6 +45,10 @@
         width: calc(100% - 128px);
         justify-content: space-between;
         align-items: center;
+          @media screen and (max-width: 768px) {
+            width: 405px;
+            align-items: flex-start;
+        }
     }
 }
 .button {
