--- a/css/blocks/_note.scss
+++ b/css/blocks/_note.scss
@@ -1,3 +1,4 @@
+@import "../const";
 .note {
     background-color: #201f37;
     width: 196px;
@@ -5,6 +6,11 @@
     border-radius: 12px;
     top: 318px;
     right: -95px;
+    @media screen and (max-width: 768px) {
+        top: 336px;
+        right: -25px;
+        width: 150px;
+    }
     &__title {
         padding: 13px;
         font-family: Gilroy;
@@ -29,6 +35,9 @@
             color: $white;
             display: flex;
             align-items: center;
+            @media screen and (max-width: 768px) {
+                padding-left: 3px;
+            }
             & > img {
                 margin-right: 8px;
             }
