--- a/css/blocks/_offer.scss
+++ b/css/blocks/_offer.scss
@@ -1,17 +1,44 @@
 @import "mixins";
+@import "../const";
 .offer {
     margin: calc(61px + 96px) auto 60px auto;
     display: flex;
     justify-content: space-between;
     width: 1128px;
     align-items: center;
+    @media screen and (max-width: 1128px) {
+        width: 746px;
+        margin: 10px auto;
+        flex-direction: column;
+        align-items: flex-start;
+        grid-area: 10px;
+        @media screen and (max-width: 768px) {
+        width: 405px;
+      }
+    }
     &__wrapper {
         display: flex;
         flex-direction: column;
+        position: relative;
+        @media screen and (max-width: 1128px) {
+            &::after {
+                content: "";
+                position: absolute;
+                width: 100%;
+                border: 1px solid $indigo;
+                bottom: -1px;
+            }
+        }
     }
     &__title {
         @include font(700, 32px, 140%, $gray);
         margin-bottom: 8px;
+        @media screen and (max-width: 1128px) {
+            width: 400px;
+            @media screen and (max-width: 768px) {
+                margin: 50px 0 20px 0;
+            }
+        }
         & > span {
             color: $indigo;
         }
