--- a/css/blocks/_slider.scss
+++ b/css/blocks/_slider.scss
@@ -3,14 +3,18 @@
     &__wrapper {
         display: flex;
         justify-content: space-between;
+        
+        @media screen and (max-width: 768px) {
+            flex: 1 0 50%;
+        }
     }
     &__dots {
         display: flex;
         gap: 8px;
         align-items: center;
         &__dot {
-             @include circle(4px);
-             background-color: #32334c;
+            @include circle(4px);
+            background-color: #32334c;
             &--active {
                 width: 8px;
                 height: 8px;
@@ -20,7 +24,7 @@
             &__wrapper {
                 &--active {
                     border: 1px solid #9d097c;
-                     @include circle(24px);
+                    @include circle(24px);
                 }
             }
         }
@@ -28,6 +32,7 @@
     &__arrow {
         background-color: #fff0f5;
         @include circle(40px);
+        cursor: pointer;
         &--right {
             transform: rotate(180deg);
         }
@@ -37,5 +42,10 @@
         gap: 16px;
         width: 172px;
         margin: 40px auto 0 auto;
+        @media screen and (max-width: 768px) {
+            width: 405px;
+            justify-content: center;
+            gap: 40px;
+        }
     }
 }
