--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,43 @@
   width: 1128px;
   margin: 0 auto;
 }
+@media screen and (max-width: 1128px) {
+  .navbar {
+    width: 768px;
+  }
+}
+@media screen and (max-width: 1128px) and (max-width: 768px) {
+  .navbar {
+    width: 405px;
+  }
+}
 .navbar__logo {
   width: 88px;
   height: 36px;
   margin-right: 40px;
 }
+@media screen and (max-width: 1128px) {
+  .navbar__logo {
+    margin: 0 20px 0 10px;
+  }
+}
+@media screen and (max-width: 1128px) and (max-width: 768px) {
+  .navbar__logo {
+    display: none;
+  }
+}
 .navbar__items {
   display: flex;
   gap: 48px;
   height: 24px;
+}
+@media screen and (max-width: 768px) {
+  .navbar__items {
+    width: 300px;
+    gap: 20px;
+    flex-wrap: wrap;
+    height: auto;
+  }
 }
 .navbar__items__item {
   font-family: Poppins, sans-serif;
@@ -31,6 +59,12 @@
   width: calc(100% - 128px);
   justify-content: space-between;
   align-items: center;
+}
+@media screen and (max-width: 768px) {
+  .navbar__wrapper {
+    width: 405px;
+    align-items: flex-start;
+  }
 }
 
 .button {
@@ -80,6 +114,11 @@
   width: 744px;
   height: 418px;
 }
+@media screen and (max-width: 768px) {
+  .hero__video {
+    width: 405px;
+  }
+}
 .hero__diagram {
   height: 54px;
   width: 54px;
@@ -105,6 +144,15 @@
   background-color: #57b8f6;
 }
 .hero__memoji__image {
+  width: 100%;
+}
+@media screen and (max-width: 1128px) {
+  .hero__memoji {
+    top: 220px;
+    right: 40px;
+  }
+}
+.hero__image {
   width: 39px;
   height: 39px;
 }
@@ -124,6 +172,22 @@
   z-index: 2;
   box-shadow: 0px 40px 80px -16px rgba(0, 0, 0, 0.0784313725);
 }
+@media screen and (max-width: 1128px) {
+  .hero__notification {
+    position: relative;
+    flex-direction: row;
+    align-items: center;
+    top: 0;
+    right: 0;
+    justify-content: center;
+    margin-top: 15px;
+  }
+}
+@media screen and (max-width: 1128px) and (max-width: 768px) {
+  .hero__notification {
+    justify-content: flex-start;
+  }
+}
 
 .card__title {
   font-family: Poppins, sans-serif;
@@ -134,6 +198,16 @@
   letter-spacing: 0.8px;
   text-transform: uppercase;
   margin-bottom: 20px;
+  position: relative;
+}
+@media screen and (max-width: 1168px) {
+  .card__title::before {
+    content: "";
+    position: absolute;
+    left: -20px;
+    height: 100%;
+    border: 1px solid #444bd3;
+  }
 }
 .card__list {
   display: flex;
@@ -248,6 +322,11 @@
   flex-direction: column;
   align-items: center;
 }
+@media screen and (max-width: 768px) {
+  .cta__wrapper {
+    width: 405px;
+  }
+}
 .cta__title {
   font-family: Poppins, sans-serif;
   font-weight: 700;
@@ -276,11 +355,19 @@
   background-color: #fff;
   padding: 14px 32px;
   border-radius: 8px;
+  cursor: pointer;
 }
 .cta__button--offer {
   color: #fff;
   background-color: #444bd3;
   max-height: 52px;
+}
+@media screen and (max-width: 1128px) {
+  .cta__button {
+    margin-top: 10px;
+    float: right;
+    align-self: flex-end;
+  }
 }
 
 .offer {
@@ -290,9 +377,33 @@
   width: 1128px;
   align-items: center;
 }
+@media screen and (max-width: 1128px) {
+  .offer {
+    width: 746px;
+    margin: 10px auto;
+    flex-direction: column;
+    align-items: flex-start;
+    grid-area: 10px;
+  }
+}
+@media screen and (max-width: 1128px) and (max-width: 768px) {
+  .offer {
+    width: 405px;
+  }
+}
 .offer__wrapper {
   display: flex;
   flex-direction: column;
+  position: relative;
+}
+@media screen and (max-width: 1128px) {
+  .offer__wrapper::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    border: 1px solid #444bd3;
+    bottom: -1px;
+  }
 }
 .offer__title {
   font-family: Poppins, sans-serif;
@@ -301,6 +412,16 @@
   line-height: 140%;
   color: #121127;
   margin-bottom: 8px;
+}
+@media screen and (max-width: 1128px) {
+  .offer__title {
+    width: 400px;
+  }
+}
+@media screen and (max-width: 1128px) and (max-width: 768px) {
+  .offer__title {
+    margin: 50px 0 20px 0;
+  }
 }
 .offer__title > span {
   color: #444bd3;
@@ -318,6 +439,18 @@
   width: 1128px;
   display: flex;
 }
+@media screen and (max-width: 1128px) {
+  .footer__wrapper {
+    width: 748px;
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 1128px) and (max-width: 768px) {
+  .footer__wrapper {
+    width: 405px;
+    justify-content: center;
+  }
+}
 .footer__copyright {
   font-family: Poppins, sans-serif;
   font-weight: 400;
@@ -330,6 +463,16 @@
   margin: 0 auto;
   border-top: 1px solid rgba(18, 17, 39, 0.1215686275);
 }
+@media screen and (max-width: 1168px) {
+  .footer__copyright {
+    width: 746px;
+  }
+}
+@media screen and (max-width: 1168px) and (max-width: 768px) {
+  .footer__copyright {
+    width: 405px;
+  }
+}
 .footer__description {
   font-family: Poppins, sans-serif;
   font-weight: 400;
@@ -338,6 +481,11 @@
   color: rgba(18, 17, 39, 0.5607843137);
   margin: 24px 0;
   width: 360px;
+}
+@media screen and (max-width: 768px) {
+  .footer__description {
+    width: 250px;
+  }
 }
 .footer__contacts {
   max-width: 360px;
@@ -349,6 +497,18 @@
   grid-template-columns: repeat(4, minmax(192px, 1fr));
   justify-self: start;
 }
+@media screen and (max-width: 1168px) {
+  .footer__info {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+  }
+}
+@media screen and (max-width: 1168px) {
+  .footer__card {
+    display: inline-block;
+  }
+}
 
 .socialMedia {
   display: flex;
@@ -358,9 +518,48 @@
   list-style-type: none;
 }
 
+.footer__card {
+  position: relative;
+}
+.footer__card .arrow-footer {
+  display: none;
+  cursor: pointer;
+  font-size: 18px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  transition: transform 0.3s ease;
+}
+.footer__card .card__list {
+  overflow: hidden;
+  max-height: none;
+  transition: max-height 0.3s ease;
+}
+.footer__card .card__list.active {
+  max-height: 500px;
+}
+@media screen and (max-width: 1168px) {
+  .footer__card .arrow-footer {
+    display: block;
+    color: rgba(18, 17, 39, 0.4);
+  }
+  .footer__card .card__list {
+    max-height: 0;
+  }
+}
+
+.arrow-footer.open {
+  transform: rotate(90deg);
+}
+
 .slider__wrapper {
   display: flex;
   justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+  .slider__wrapper {
+    flex: 1 0 50%;
+  }
 }
 .slider__dots {
   display: flex;
@@ -398,6 +597,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 .slider__arrow--right {
   transform: rotate(180deg);
@@ -407,6 +607,13 @@
   gap: 16px;
   width: 172px;
   margin: 40px auto 0 auto;
+}
+@media screen and (max-width: 768px) {
+  .slider__pagination {
+    width: 405px;
+    justify-content: center;
+    gap: 40px;
+  }
 }
 
 .tile {
@@ -446,6 +653,16 @@
   width: 1128px;
   margin: 192px auto 0 auto;
 }
+@media screen and (max-width: 1128px) {
+  .examples {
+    width: 748px;
+  }
+}
+@media screen and (max-width: 1128px) and (max-width: 768px) {
+  .examples {
+    width: 405px;
+  }
+}
 .examples__title {
   font-family: Poppins, sans-serif;
   font-weight: 600;
@@ -456,6 +673,11 @@
   text-transform: uppercase;
   margin-bottom: 12px;
 }
+@media screen and (max-width: 1128px) {
+  .examples__title {
+    margin-left: 10px;
+  }
+}
 .examples__header {
   font-family: Poppins, sans-serif;
   font-weight: 700;
@@ -464,14 +686,37 @@
   color: #121127;
   margin-bottom: 41px;
 }
+@media screen and (max-width: 1128px) {
+  .examples__header {
+    margin-left: 10px;
+  }
+}
 .examples__wrapper {
   display: flex;
   gap: 120px;
+}
+@media screen and (max-width: 1128px) {
+  .examples__wrapper {
+    width: 746px;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media screen and (max-width: 1128px) and (max-width: 768px) {
+  .examples__wrapper {
+    width: 405px;
+  }
 }
 
 .example {
   position: relative;
   width: 456px;
+}
+@media screen and (max-width: 768px) {
+  .example {
+    width: 405px;
+    overflow: hidden;
+  }
 }
 .example__title {
   font-family: Poppins, sans-serif;
@@ -494,6 +739,11 @@
   height: 297px;
   margin-bottom: 32px;
 }
+@media screen and (max-width: 768px) {
+  .example__image {
+    width: 405px;
+  }
+}
 .example__list {
   font-family: Poppins, sans-serif;
   font-weight: 400;
@@ -504,6 +754,12 @@
   flex-direction: column;
   gap: 8px;
   list-style: none;
+}
+@media screen and (max-width: 768px) {
+  .example__list {
+    width: 405px;
+    margin: 0 auto;
+  }
 }
 .example__list__item {
   display: flex;
@@ -527,6 +783,13 @@
   border-radius: 12px;
   top: 318px;
   right: -95px;
+}
+@media screen and (max-width: 768px) {
+  .note {
+    top: 336px;
+    right: -25px;
+    width: 150px;
+  }
 }
 .note__title {
   padding: 13px;
@@ -553,6 +816,11 @@
   color: #fff;
   display: flex;
   align-items: center;
+}
+@media screen and (max-width: 768px) {
+  .note__list__item {
+    padding-left: 3px;
+  }
 }
 .note__list__item > img {
   margin-right: 8px;
@@ -699,6 +967,16 @@
   margin: 0 auto;
   padding-top: 24px;
 }
+@media screen and (max-width: 1128px) {
+  .advantage {
+    width: 748px;
+  }
+}
+@media screen and (max-width: 1128px) and (max-width: 768px) {
+  .advantage {
+    width: 405px;
+  }
+}
 .advantage__header {
   max-width: 604px;
   margin-bottom: 40px;
@@ -718,6 +996,11 @@
   font-size: 40px;
   line-height: 140%;
   color: #121127;
+}
+@media screen and (max-width: 768px) {
+  .advantage__slogan {
+    font-size: 20px;
+  }
 }
 
 * {
