--- a/css/blocks/_navbar.scss
+++ b/css/blocks/_navbar.scss
@@ -30,6 +30,10 @@
             gap: 20px;
             flex-wrap: wrap;
             height: auto;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            // gap: 0px 0px;
         }
         &__item {
             @include font(500, 14px, 24px, $grayOpacity);
@@ -45,9 +49,9 @@
         width: calc(100% - 128px);
         justify-content: space-between;
         align-items: center;
-          @media screen and (max-width: 768px) {
+        @media screen and (max-width: 768px) {
             width: 405px;
-            align-items: flex-start;
+            // align-items: flex-start;
         }
     }
 }
