--- a/css/blocks/_popup.scss
+++ b/css/blocks/_popup.scss
@@ -41,6 +41,9 @@
     flex-direction: column;
     align-items: center;
     max-height: 657px;
+    @media screen and (max-width: 768px) {
+        // width: 405px;
+    }
     &__logo {
         margin-top: 136px;
     }
