--- a/css/blocks/_cta.scss
+++ b/css/blocks/_cta.scss
@@ -9,7 +9,7 @@
         flex-direction: column;
         align-items: center;
         @media screen and (max-width: 768px) {
-            width: 405px;
+            width: calc(100% - 20px);
         }
     }
     &__title {
