--- a/css/blocks/_hero.scss
+++ b/css/blocks/_hero.scss
@@ -19,6 +19,7 @@
         height: 418px;
         @media screen and (max-width: 768px) {
             width: 405px;
+            height: auto;
         }
     }
     &__diagram {
@@ -40,9 +41,12 @@
         &__image {
             width: 100%;
         }
-        @media screen and (max-width: 1128px) {
-            top: 220px;
-            right: 40px;
+        @media screen and (max-width: 768px) {
+            top: 275px;
+            right: 100px;
+            @media screen and (max-width: 550px) {
+                display: none;
+            }
         }
     }
     &__image {
@@ -54,6 +58,9 @@
         position: absolute;
         top: 611px;
         left: -86px;
+        @media screen and (max-width: 768px) {
+            display: none;
+        }
     }
     &__notification {
         position: absolute;
@@ -75,6 +82,7 @@
             margin-top: 15px;
             @media screen and (max-width: 768px) {
                 justify-content: flex-start;
+                margin-left: 20px;
             }
         }
     }
