--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,9 @@
     gap: 20px;
     flex-wrap: wrap;
     height: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
   }
 }
 .navbar__items__item {
@@ -63,7 +66,6 @@
 @media screen and (max-width: 768px) {
   .navbar__wrapper {
     width: 405px;
-    align-items: flex-start;
   }
 }
 
@@ -117,6 +119,7 @@
 @media screen and (max-width: 768px) {
   .hero__video {
     width: 405px;
+    height: auto;
   }
 }
 .hero__diagram {
@@ -146,10 +149,15 @@
 .hero__memoji__image {
   width: 100%;
 }
-@media screen and (max-width: 1128px) {
+@media screen and (max-width: 768px) {
   .hero__memoji {
-    top: 220px;
-    right: 40px;
+    top: 275px;
+    right: 100px;
+  }
+}
+@media screen and (max-width: 768px) and (max-width: 550px) {
+  .hero__memoji {
+    display: none;
   }
 }
 .hero__image {
@@ -160,6 +168,11 @@
   position: absolute;
   top: 611px;
   left: -86px;
+}
+@media screen and (max-width: 768px) {
+  .hero__arrow {
+    display: none;
+  }
 }
 .hero__notification {
   position: absolute;
@@ -186,6 +199,7 @@
 @media screen and (max-width: 1128px) and (max-width: 768px) {
   .hero__notification {
     justify-content: flex-start;
+    margin-left: 20px;
   }
 }
 
@@ -229,11 +243,28 @@
   top: 210px;
   left: -47px;
 }
+@media screen and (max-width: 768px) {
+  .card {
+    top: 250px;
+    left: 100px;
+  }
+}
+@media screen and (max-width: 768px) and (max-width: 550px) {
+  .card {
+    padding: 0;
+    display: none;
+  }
+}
 .card-second {
   top: 0;
   left: 0;
   position: relative;
   padding: 21px 22px;
+}
+@media screen and (max-width: 550px) {
+  .card-second {
+    padding: 0;
+  }
 }
 .card__present {
   width: 49px;
@@ -324,7 +355,7 @@
 }
 @media screen and (max-width: 768px) {
   .cta__wrapper {
-    width: 405px;
+    width: calc(100% - 20px);
   }
 }
 .cta__title {
@@ -502,6 +533,7 @@
     display: flex;
     flex-direction: column;
     width: auto;
+    justify-content: center;
   }
 }
 @media screen and (max-width: 1168px) {
@@ -559,6 +591,7 @@
 @media screen and (max-width: 768px) {
   .slider__wrapper {
     flex: 1 0 50%;
+    justify-content: space-evenly;
   }
 }
 .slider__dots {
