--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@
     width: 405px;
   }
 }
+@media screen and (max-width: 1128px) and (max-width: 768px) and (max-width: 420px) {
+  .navbar {
+    width: 355px;
+  }
+}
 .navbar__logo {
   width: 88px;
   height: 36px;
@@ -68,6 +73,11 @@
     width: 405px;
   }
 }
+@media screen and (max-width: 768px) and (max-width: 420px) {
+  .navbar__wrapper {
+    width: 355px;
+  }
+}
 
 .button {
   width: 102px;
@@ -79,6 +89,12 @@
   line-height: 24px;
   color: rgba(18, 17, 39, 0.7215686275);
   cursor: pointer;
+}
+@media screen and (max-width: 420px) {
+  .button {
+    width: 70px;
+    height: 30px;
+  }
 }
 .button--up {
   background-color: #444bd3;
@@ -120,6 +136,11 @@
   .hero__video {
     width: 405px;
     height: auto;
+  }
+}
+@media screen and (max-width: 768px) and (max-width: 420px) {
+  .hero__video {
+    width: 355px;
   }
 }
 .hero__diagram {
@@ -422,6 +443,11 @@
     width: 405px;
   }
 }
+@media screen and (max-width: 1128px) and (max-width: 768px) and (max-width: 420px) {
+  .offer {
+    width: 355px;
+  }
+}
 .offer__wrapper {
   display: flex;
   flex-direction: column;
@@ -454,6 +480,11 @@
     margin: 50px 0 20px 0;
   }
 }
+@media screen and (max-width: 1128px) and (max-width: 768px) and (max-width: 420px) {
+  .offer__title {
+    width: 355px;
+  }
+}
 .offer__title > span {
   color: #444bd3;
 }
@@ -482,6 +513,12 @@
     justify-content: center;
   }
 }
+@media screen and (max-width: 1128px) and (max-width: 768px) and (max-width: 420px) {
+  .footer__wrapper {
+    width: 355px;
+    justify-content: center;
+  }
+}
 .footer__copyright {
   font-family: Poppins, sans-serif;
   font-weight: 400;
@@ -504,6 +541,11 @@
     width: 405px;
   }
 }
+@media screen and (max-width: 1168px) and (max-width: 768px) and (max-width: 420px) {
+  .footer__copyright {
+    width: 355px;
+  }
+}
 .footer__description {
   font-family: Poppins, sans-serif;
   font-weight: 400;
@@ -516,6 +558,11 @@
 @media screen and (max-width: 768px) {
   .footer__description {
     width: 250px;
+  }
+}
+@media screen and (max-width: 768px) and (max-width: 420px) {
+  .footer__description {
+    width: 200px;
   }
 }
 .footer__contacts {
@@ -584,6 +631,11 @@
   transform: rotate(90deg);
 }
 
+@media screen and (max-width: 420px) {
+  .slider {
+    width: 355px;
+  }
+}
 .slider__wrapper {
   display: flex;
   justify-content: space-between;
@@ -600,6 +652,7 @@
   align-items: center;
 }
 .slider__dots__dot {
+  cursor: pointer;
   width: 4px;
   height: 4px;
   border-radius: 50%;
@@ -646,6 +699,11 @@
     width: 405px;
     justify-content: center;
     gap: 40px;
+  }
+}
+@media screen and (max-width: 768px) and (max-width: 420px) {
+  .slider__pagination {
+    width: 355px;
   }
 }
 
@@ -696,6 +754,11 @@
     width: 405px;
   }
 }
+@media screen and (max-width: 1128px) and (max-width: 768px) and (max-width: 420px) {
+  .examples {
+    width: 355px;
+  }
+}
 .examples__title {
   font-family: Poppins, sans-serif;
   font-weight: 600;
@@ -740,6 +803,11 @@
     width: 405px;
   }
 }
+@media screen and (max-width: 1128px) and (max-width: 768px) and (max-width: 420px) {
+  .examples__wrapper {
+    width: 355px;
+  }
+}
 
 .example {
   position: relative;
@@ -749,6 +817,11 @@
   .example {
     width: 405px;
     overflow: hidden;
+  }
+}
+@media screen and (max-width: 768px) and (max-width: 420px) {
+  .example {
+    width: 355px;
   }
 }
 .example__title {
@@ -1008,6 +1081,11 @@
 @media screen and (max-width: 1128px) and (max-width: 768px) {
   .advantage {
     width: 405px;
+  }
+}
+@media screen and (max-width: 1128px) and (max-width: 768px) and (max-width: 420px) {
+  .advantage {
+    width: 355px;
   }
 }
 .advantage__header {
